--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -9,6 +9,7 @@ BASE_DIR = os.path.dirname(os.path.dirname(__file__))
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
+DEV_ENV = True
 TEMPLATE_DEBUG = True
 
 INTERNAL_IPS = ['127.0.0.1', 'localhost']
@@ -28,6 +29,13 @@ DATABASES = {
         'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
     }
 }
+
+# Directory where uploaded images should be stored
+# NOTE: in QA/Prod this should be *outside* fabric deploy directory,
+# so it can be preserved across deploys
+MEDIA_ROOT = os.path.join(BASE_DIR, 'media')
+# Temporary folder for upload
+UPLOAD_TO = os.path.join(BASE_DIR, 'media/upload')
 
 # configure which IP addresses are allowed to access the index data service
 EUL_INDEXER_ALLOWED_IPS = []
