--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -37,6 +37,17 @@ MEDIA_ROOT = os.path.join(BASE_DIR, 'media')
 # Temporary folder for upload
 UPLOAD_TO = os.path.join(BASE_DIR, 'media/upload')
 
+# LDAP login settings.
+AUTH_LDAP_SERVER = 'ldaps://ldap.co'
+AUTH_LDAP_BASE_USER = ''           # DN of the  base LDAP user (e.g., 'uid=foo,ou=bar,o=emory.edu')
+AUTH_LDAP_BASE_PASS = ''           # password for that user
+AUTH_LDAP_SEARCH_SUFFIX = ''
+AUTH_LDAP_SEARCH_FILTER = '(uid=%s)'
+AUTH_LDAP_CHECK_SERVER_CERT = False  # set to False to skip server cert verification (TESTING ONLY)
+AUTH_LDAP_CA_CERT_PATH = ''        # full path to CA cert bundle
+#AUTH_LDAP_CA_CERT_PATH = '/usr/share/ssl/certs/ca-bundle.crt'        # full path to CA cert bundle
+#AUTH_LDAP_CA_CERT_PATH = ''        # full path to CA cert bundle
+
 # configure which IP addresses are allowed to access the index data service
 EUL_INDEXER_ALLOWED_IPS = []
 
