document new settings required for cover image import [#67574168]

--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -60,10 +60,13 @@ SOLR_SERVER_URL = "http://server.name:8983/solr/readux/"
 
 # Fedora Repository settings
 FEDORA_ROOT = 'https://localhost:8443/fedora/'
-# optional fedora credentials
 # FEDORA_PIDSPACE = 'readux'
-# FEDORA_USER = 'fedoraAdmin'
-# FEDORA_PASSWORD = 'fedoraAdmin'
+# NOTE: should be configured with a limited access guest account
+FEDORA_USER = 'guest'
+FEDORA_PASSWORD = 'guest'
+# fedora user with access to manage content; used for ingest scripts etc.
+FEDORA_MANAGEMENT_USER = 'fedoraAdmin'
+FEDORA_MANAGEMENT_PASSWORD = 'fedoraAdmin'
 # use this to explicitly configure a test pidspace; by default, uses pidspace-test
 # FEDORA_TEST_PIDSPACE = 'testme'
 FEDORA_TEST_ROOT = 'https://localhost:8543/fedora/'
@@ -76,6 +79,8 @@ PIDMAN_USER = ''
 PIDMAN_PASSWORD = ''
 # PIDMAN_DOMAIN = '' # default domain (e.g., for creating pids)
 
+# URL to the digitization workflow api, e.g. http://my.server.co/digwf_api/
+DIGITIZATION_WORKFLOW_API = ''
 
 # Logging
 # https://docs.djangoproject.com/en/1.6/topics/logging/
