--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -16,6 +16,9 @@ INTERNAL_IPS = ['127.0.0.1', 'localhost']
 
 ALLOWED_HOSTS = ['localhost']
 
+# Set to True if you want the beta warning banner displayed on the site (e.g., for QA)
+ENABLE_BETA_WARNING = False
+
 # SECURITY WARNING: keep the secret key used in production secret!
 # Generate a new key here: http://www.miniwebtool.com/django-secret-key-generator/
 SECRET_KEY = ''
