--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -93,6 +93,10 @@ PIDMAN_PASSWORD = ''
 # URL to the digitization workflow api, e.g. http://my.server.co/digwf_api/
 DIGITIZATION_WORKFLOW_API = ''
 
+# threshold where PDFs should be considered *large* and a warning shown to users
+LARGE_PDF_THRESHOLD = 1024 * 1024 * 750
+
+
 # Logging
 # https://docs.djangoproject.com/en/1.6/topics/logging/
 LOGGING = {
