page-level TEI facsimile updates - use parameters to fill in minimal required header fields - local TEI schema for validation when generating TEI - unit test for header fields, valid TEI [#74729544]

--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -96,6 +96,8 @@ DIGITIZATION_WORKFLOW_API = ''
 # threshold where PDFs should be considered *large* and a warning shown to users
 LARGE_PDF_THRESHOLD = 1024 * 1024 * 750
 
+# Name to appear in the publicationStmt/distributor of generated TEI
+TEI_DISTRIBUTOR = ''  # e.g., Emory University
 
 # Logging
 # https://docs.djangoproject.com/en/1.6/topics/logging/
