Update django-auth-ldap sample config

--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -48,17 +48,6 @@ MEDIA_ROOT = os.path.join(BASE_DIR, 'media')
 # Temporary folder for upload
 UPLOAD_TO = os.path.join(BASE_DIR, 'media/upload')
 
-# LDAP login settings.
-AUTH_LDAP_SERVER = 'ldaps://ldap.co'
-AUTH_LDAP_BASE_USER = ''
-AUTH_LDAP_BASE_PASS = ''           # password for that user
-AUTH_LDAP_SEARCH_SUFFIX = ''
-AUTH_LDAP_SEARCH_FILTER = '(uid=%s)'
-AUTH_LDAP_CHECK_SERVER_CERT = False  # set to False to skip server cert verification (TESTING ONLY)
-AUTH_LDAP_CA_CERT_PATH = ''        # full path to CA cert bundle
-#AUTH_LDAP_CA_CERT_PATH = '/usr/share/ssl/certs/ca-bundle.crt'        # full path to CA cert bundle
-#AUTH_LDAP_CA_CERT_PATH = ''        # full path to CA cert bundle
-
 # django-auth-ldap settings
 import ldap
 from django_auth_ldap.config import LDAPSearch
@@ -72,9 +61,9 @@ AUTH_LDAP_USER_ATTR_MAP = {
     'first_name': 'givenName',
     'last_name': 'sn',
     'email': 'mail',
-    'phone': 'telephoneNumber',
-    'dept_num': 'departmentNumber',
-    'full_name': 'cn',
+    # 'phone': 'telephoneNumber',
+    # 'dept_num': 'departmentNumber',
+    # 'full_name': 'cn',
     'title': 'title',
 }
 
