--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -56,6 +56,12 @@ AUTH_LDAP_SERVER_URI = 'ldaps://ldap.co'
 AUTH_LDAP_BIND_DN = ''     # DN of the  base LDAP user (e.g., 'uid=foo,ou=bar,o=emory.edu')
 AUTH_LDAP_BIND_PASSWORD = ''           # password for that user
 AUTH_LDAP_USER_SEARCH = LDAPSearch("o=...",   ldap.SCOPE_SUBTREE, "(uid=%(user)s)")
+# If a cert file needs to be specified, or any other ldap options
+# from http://python-ldap.org/doc/html/ldap.html#options are needed,
+# add them here:
+# AUTH_LDAP_GLOBAL_OPTIONS = {
+#     ldap.OPT_X_TLS_CACERTFILE: '...',
+# }
 
 AUTH_LDAP_USER_ATTR_MAP = {
     'first_name': 'givenName',
@@ -64,7 +70,7 @@ AUTH_LDAP_USER_ATTR_MAP = {
     # 'phone': 'telephoneNumber',
     # 'dept_num': 'departmentNumber',
     # 'full_name': 'cn',
-    'title': 'title',
+    # 'title': 'title',
 }
 
 # Social Authentication configurations
