Reorganize javascript to clearly differentiate local and external code

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -21,9 +21,5 @@ ratings:
   - "**.js"
   - "**.py"
 exclude_paths:
-  - "sitemedia/js/openseadragon/*"
-  - "sitemedia/plugins/**"
-  - "sitemedia/js/annotator.min.js"
-  - "sitemedia/js/isotope.min.js"
-  - "sitemedia/js/js.cookie.js"
+  - "sitemedia/ext/**"
 
