Use Amazon S3 for temporary download of background export zip file
Also includes some clean up in volume export template and behavior
for what is displayed and hidden when (particularly status panel updates.)

[#91627188]

--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -164,6 +164,11 @@ IIIF_ID_SUFFIX = ''
 # override default git author name if desired
 # GIT_AUTHOR_NAME = 'readux'
 
+# AWS S3 settings
+AWS_ACCESS_KEY_ID = ''
+AWS_SECRET_ACCESS_KEY = ''
+AWS_S3_BUCKET = ''
+
 
 # Logging
 # https://docs.djangoproject.com/en/1.6/topics/logging/
