--- a/readux/localsettings.py.dist
+++ b/readux/localsettings.py.dist
@@ -164,6 +164,19 @@ IIIF_ID_SUFFIX = ''
 # override default git author name if desired
 # GIT_AUTHOR_NAME = 'readux'
 
+# channels backend configuration
+CHANNEL_LAYERS = {
+    "default": {
+        # in memory is fine for development; use redis for production/qa
+        "BACKEND": "asgiref.inmemory.ChannelLayer",
+        # "BACKEND": "asgi_redis.RedisChannelLayer",
+        # "CONFIG": {
+        #     "hosts": [("localhost", 6379)],
+        # },
+        "ROUTING": "readux.routing.channel_routing",
+    },
+}
+
 # AWS S3 settings
 AWS_ACCESS_KEY_ID = ''
 AWS_SECRET_ACCESS_KEY = ''
