Ignore some local junk.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ docs/_build/
 sitemedia/plugins/annotator/scss/.sass-cache
 sitemedia/plugins/annotator/scss/node_modules
 static/plugins/annotator/scss/node_modules
+
+# Local Junk
+.vscode
+.DS_Store
