--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "python.linting.enabled": false,
-  "python.pythonPath": "python3",
+  "python.pythonPath": "/usr/local/opt/python@2/bin/python2.7",
 }
