--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "3.4"
   - "3.5"
   - "3.5-dev"  # 3.5 development branch
   - "3.6"
@@ -15,4 +14,4 @@ install:
   - pip install -r requirements/local.txt
 # command to run tests
 script:
-  - python manage.py test
+  - pytest
