--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ services: postgresql
 before_install:
   - export DATABASE_URL=postgres://postgres@localhost:5432/travisci
   - cp config/settings/local.dst config/settings/local.py
+  - sudo /etc/init.d/postgresql stop
+  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
+  - sudo apt-get update
+  - sudo apt-get install postgresql-9.5
 # command to install dependencies
 install:
   - pip install -r requirements/local.txt
