--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,7 @@ install:
   - pip install -r requirements/local.txt
 # command to run tests
 script:
-  - pytest
+  - pytest --cov=./apps
+
+afer_success:
+  - coveralls
