--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - pip install -r requirements/local.txt
 # command to run tests
 script:
-  - pytest --cov=./apps
+  - py.test --cov=./apps
 
 afer_success:
   - coveralls
