--- a/apps/iiif/manifests/fixtures/manifests.json
+++ b/apps/iiif/manifests/fixtures/manifests.json
@@ -13,6 +13,7 @@
       "metadata": "[{}]",
       "viewingDirection": "left-to-right",
       "created_at": "2019-04-01T14:41:06.798Z",
+      "logo": "awesome.png",
       "collections": [
           "1971fe1e-714f-40f1-9d35-ee0f7a301230"
       ]
