--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ python:
 - 3.5-dev
 - '3.6'
 - 3.6-dev
+- '3.7'
+- 3.7-dev
 services: postgresql
 before_install:
 - export DATABASE_URL=postgres://postgres@localhost:5432/travisci
 - cp config/settings/local.dst config/settings/local.py
+- bundle install
 - sudo /etc/init.d/postgresql stop
 - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key
   add -
