--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=config.settings.test
+DJANGO_SETTINGS_MODULE=config.settings.local
 norecursedirs = node_modules
 python_files = tests.py test_*.py *_tests.py
