--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ services: postgresql
 before_install:
 - export DATABASE_URL=postgres://postgres@localhost:5432/travisci
 - cp config/settings/local.dst config/settings/local.py
+- mkdir logs
+- touch logs/debug.log
 - bundle install
 - sudo /etc/init.d/postgresql stop
 - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key
