--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 - cp config/settings/local.dst config/settings/local.py
 - mkdir logs
 - touch logs/debug.log
+- gem install bundle
 - bundle install
 - sudo /etc/init.d/postgresql stop
 - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key
