Add updated at value in manifest fixture.

--- a/apps/iiif/manifests/fixtures/manifests.json
+++ b/apps/iiif/manifests/fixtures/manifests.json
@@ -16,6 +16,7 @@
       "logo": "awesome.png",
       "collections": [
         "1971fe1e-714f-40f1-9d35-ee0f7a301230"
-      ]
+      ],
+      "updated_at": "2019-04-01T14:45:06.798Z"
     }
   }]
