--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 - sudo apt-get update
 - sudo apt-get install postgresql-9.5
 install:
-- pip install -r requirements/local.txt
+- pip3 install -r requirements/local.txt
 script:
 - py.test --cov=./apps
 after_success:
