--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,6 @@ before_install:
 install:
 - pip install -r requirements/local.txt
 script:
-- py.test --cov=./apps
+- pytest apps/ --cov=./apps
 after_success:
 - coveralls
-notifications:
-  slack:
-    secure: RXQj/Zk+bbhJnO1ZVbgj6SmYBB1a7MD9gyjoEETGXVZBeP8qhtiLJFqNeAlUf0mXqyBWZvsKlFzPLzJn1o6EcB2eUJsKaTFsCmRUwcdMDRddvAlEkyNfQ0zJq91LGo8v78jmslZvMOA9HPVZvOmlIGdgGax189AC3UJ5Vk1Mmpc=
