Remove unused context from signin modal. Tweak Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_install:
 install:
 - pip install -r requirements/local.txt
 script:
-- pytest apps/ --cov=./apps
+- py.test --cov=./apps
 after_success:
 - coveralls
