--- a/apps/iiif/manifests/fixtures/manifests.json
+++ b/apps/iiif/manifests/fixtures/manifests.json
@@ -14,6 +14,7 @@
       "viewingDirection": "left-to-right",
       "created_at": "2019-04-01T14:41:06.798Z",
       "logo": "awesome.png",
+      "start_canvas": "7261fae2-a24e-4a1c-9743-516f6c4ea0c9",
       "collections": [
         "1971fe1e-714f-40f1-9d35-ee0f7a301230"
       ],
