Upgrade Pillow and install JPEG2000 packages for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 - '3.9'
 services: postgresql
 before_install:
+- sudo apt install libjpeg-dev libopenjp2-7-dev libopenjp2-tools
 - export DATABASE_URL=postgres://postgres@localhost:5432/travisci
 - cp config/settings/local.travis config/settings/local.py
 - mkdir logs
