--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 - '3.9'
 services: postgresql
 before_install:
-- sudo apt install libjpeg-dev libopenjp2-7-dev libopenjp2-tools
+- sudo apt install libjpeg-dev libopenjp2-7-dev libopenjp2-tools libssl-dev
 - export DATABASE_URL=postgres://postgres@localhost:5432/travisci
 - cp config/settings/local.travis config/settings/local.py
 - mkdir logs
