--- a/apps/iiif/manifests/fixtures/manifests.json
+++ b/apps/iiif/manifests/fixtures/manifests.json
@@ -11,7 +11,7 @@
       "publisher": "Appresso Niccol\u00f2, e Marco Pagliarini ...",
       "pdf": "https://readux.ecds.emory.edu/books/readux:st7r6/pdf/",
       "metadata": "[{}]",
-      "viewingDirection": "left-to-right",
+      "viewingdirection": "left-to-right",
       "created_at": "2019-04-01T14:41:06.798Z",
       "logo": "awesome.png",
       "start_canvas": "7261fae2-a24e-4a1c-9743-516f6c4ea0c9",
