Background adding OCR

--- a/.pylintrc
+++ b/.pylintrc
@@ -135,7 +135,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         too-many-ancestors,
-        logging-format-interpolation
+        logging-format-interpolation,
+        logging-fstring-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
