--- a/.pylintrc
+++ b/.pylintrc
@@ -15,7 +15,7 @@ ignore-patterns=.*/migrations/*.py
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+; init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
 
 # Use multiple processes to speed up Pylint.
 jobs=1
@@ -23,6 +23,8 @@ jobs=1
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
 load-plugins=pylint_django
+
+django-settings-module=config.settings.local
 
 # Pickle collected data for later comparisons.
 persistent=yes
