Reorganize remote ingest and add tests

--- a/apps/ingest/fixtures/manifest.json
+++ b/apps/ingest/fixtures/manifest.json
@@ -3,7 +3,7 @@
   "@id": "https://fake.archivelab.io/iiif/09359080.4757.emory.edu/manifest.json",
   "@type": "sc:Manifest",
   "attribution": "The Internet Archive",
-  "description": "Electronic reproduction. digitized.",
+  "description": "Respect Frederick Douglass.",
   "label": "Address by Hon. Frederick Douglass",
   "logo": "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcReMN4l9cgu_qb1OwflFeyfHcjp8aUfVNSJ9ynk2IfuHwW1I4mDSw",
   "metadata": [
