Add test for Jekyll export error

--- a/.gitignore
+++ b/.gitignore
@@ -67,11 +67,10 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
-.coverage
 .cache
 nosetests.xml
 coverage.xml
-.coveragerc
+.coverage*
 # Packages
 *.egg
 *.egg-info
