--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.8
+      - image: cimg/python:3.8
         environment:
           DATABASE_URL: postgres://root@127.0.0.1:5432/readux
           PGUSER: root
@@ -17,7 +17,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: dummy-access-key-secret
           AWS_DEFAULT_REGION: us-east-1
           DJANGO_ENV: test
-      - image: circleci/postgres:9.6.2-alpine
+      - image: cimg/postgres:10.19
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: readux
@@ -29,6 +29,7 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "requirements/local.txt" }}
       - run:
           command: |
+            sudo apt update
             sudo apt install -y libjpeg-dev libopenjp2-7-dev libopenjp2-tools libssl-dev postgresql-client ruby-full
             mkdir logs && touch logs/debug.log
             sudo gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
