--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,22 @@ jobs:
           AWS_SECRET_ACCESS_KEY: dummy-access-key-secret
           AWS_DEFAULT_REGION: us-east-1
           DJANGO_ENV: test
+          ELASTICSEARCH_URL: 127.0.0.1:9200
       - image: cimg/postgres:10.19
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: readux
       - image: cimg/ruby:2.5-node
       - image: cimg/rust:1.59.0
+      - image: docker.elastic.co/elasticsearch/elasticsearch:8.1.1
+        environment:
+          - cluster.name: readux_elasticsearch
+          - xpack.security.enabled: false
+          - transport.host: localhost
+          - network.host: 127.0.0.1
+          - http.port: 9200
+          - discovery.type: single-node
+
     steps:
       - checkout
       - restore_cache:
