--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,6 @@ jobs:
 
     steps:
       - checkout
-      - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements/local.txt" }}
       - run:
           name: Install System packages
           command: |
@@ -59,6 +57,10 @@ jobs:
           name: Wait for Elasticsearch startup
           command: |
             dockerize -wait tcp://localhost:9200
+          name: Setup fake SFTP server
+          command: |
+             ssh-keygen -b 2048 -t rsa -f /tmp/sshkey -q -N ""
+             nohup sftpserver -k /tmp/sshkey &
       - run:
           name: Running tests
           command: |
