--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "dependencies": {
-    "axios": "^0.23.0"
+    "axios": "^0.23.0",
+    "ecds-annotator": "github:ecds/ecds-annotator#develop"
   },
   "devDependencies": {
     "fontawesome": "^5.6.3",
