--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
-    "ecds-annotator": "github:ecds/ecds-annotator#develop"
+    "ecds-annotator": "../ecds-annotator"
   },
   "devDependencies": {
     "fontawesome": "^5.6.3",
     "jquery": "^3.6.0",
     "selectize": "^0.12.6",
+    "source-map-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.3",
     "uikit": "^3.14.0",
     "uikit-icons": "^0.5.0",
