--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -86,7 +86,11 @@ jobs:
           DATABASE_URL: postgres://user:password@localhost:5432/readux
           DJANGO_ENV: test
         run: |
-          pytest apps/ --cov-report html --cov-report term --cov=./apps
+          pytest apps/iiif/ --cov-report html --cov-report term --cov=./apps/iiif
+          pytest apps/export/ --cov-report html --cov-report term --cov=./apps/export
+          pytest apps/ingest/ --cov-report html --cov-report term --cov=./apps/ingest
+          pytest apps/readux/ --cov-report html --cov-report term --cov=./apps/readux
+          pytest apps/users/ --cov-report html --cov-report term --cov=./apps/users
 
       - name: Test Webpack build
         run: |
