--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
-    "ecds-annotator": "github:ecds/ecds-annotator#develop"
+    "ecds-annotator": "file:/Users/jay/data/ecds-annotator"
   },
   "devDependencies": {
     "fontawesome": "^5.6.3",
@@ -16,10 +16,11 @@
     "selectize": "^0.12.6",
     "source-map-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.4.4",
     "uikit": "^3.14.0",
     "uikit-icons": "^0.5.0",
     "vue": "^3.2.33",
-    "webpack": "^5.76.0",
+    "webpack": "^5.88.2",
     "webpack-bundle-tracker": "^1.5.0",
     "webpack-cli": "^4.9.2"
   },
