--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - develop
-  pull_request:
-    branches:
-      - develop
+  # pull_request:
+  #   branches:
+  #     - develop
 
 env:
   DATABASE_URL: postgres://user:password@localhost:5432/readux
@@ -85,17 +85,8 @@ jobs:
           pip install pyld==1.0.5
           pip install -r requirements/local.txt
 
-      - name: Test IIIF
-        run: pytest apps/iiif/
-
-      - name: Test Ingest
-        run: pytest apps/ingest/
-
-      - name: Test Readux
-        run: pytest apps/readux/
-
-      - name: Test Users
-        run: pytest apps/users/
+      - name: Test Apps
+        run: pytest apps/
 
       - name: Test Webpack build
         run: |
