--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -85,8 +85,20 @@ jobs:
           pip install pyld==1.0.5
           pip install -r requirements/local.txt
 
-      - name: Test Apps
-        run: pytest apps/
+      - name: Test Export
+        run: pytest apps/export/
+
+      - name: Test IIIF
+        run: pytest apps/iiif/
+
+      - name: Test Ingest
+        run: pytest apps/ingest/
+
+      - name: Test Readux
+        run: pytest apps/readux/
+
+      - name: Test Users
+        run: pytest apps/users/
 
       - name: Test Webpack build
         run: |
