--- a/.gitignore
+++ b/.gitignore
@@ -157,5 +157,7 @@ presentation-validator/
 nohup.out
 webpack-stats.json
 
-# compiled scss
+# compiled scss and JS
 apps/static/css/project.css
+apps/static/js/main.js
+apps/static/js/main.js.map
