--- a/.github/workflows/dev-depoly.yml
+++ b/.github/workflows/dev-depoly.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           eval `ssh-agent -s`
           ssh-add - <<< '${{ secrets.DEPLOY_KEY_FOR_CONFIG_REPO }}'
-          git clone -b develop https://github.com/ecds/readux-configs.git
+          git clone -b develop git@github.com:ecds/readux-configs.git
           mv readux-configs/* .
           chmod +x deploy.sh
           ./deploy.sh
