Set full workflow

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -3,7 +3,7 @@ name: Dev-Test
 on:
   push:
     branches:
-      - main
+      - develop
 
 env:
   DATABASE_URL: postgres://user:password@localhost:5432/readux
