--- a/.github/workflows/dev-depoly.yml
+++ b/.github/workflows/dev-depoly.yml
@@ -1,14 +1,9 @@
 name: Dev-Deploy
 
-# on:
-#   workflow_run:
-#     workflows: [Dev-Test]
-#     types: [completed]
-
 on:
-  push:
-    branches:
-      - develop
+  workflow_run:
+    workflows: [Dev-Test]
+    types: [completed]
 
 permissions:
   id-token: write   # This is required for requesting the JWT
@@ -17,7 +12,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
