Allow tests to be run manually from github

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - develop
+  workflow_dispatch:
 
 env:
   DATABASE_URL: postgres://user:password@localhost:5432/readux
@@ -51,17 +52,17 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7.2'
+          ruby-version: "2.7.2"
 
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18.12'
+          node-version: "18.12"
 
       - name: Install system requirements
         run: |
